--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -2,6 +2,6 @@ server.port = 8080
 
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8761/eureka
 
 spring.application.name=api-gateway
