--- a/order-service.properties
+++ b/order-service.properties
@@ -3,7 +3,7 @@ server.port = ${ORDER_SERVICE_PORT:0}
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8761/eureka
 
 management.endpoints.web.exposure.include=*
 
