--- a/order-service.properties
+++ b/order-service.properties
@@ -11,9 +11,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:ordermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${ORDERDB_HOST:localhost}:${ORDERDB_PORTT:3305}/${ORDERDB_NAME:ordermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:admin}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
