--- a/user-service.properties
+++ b/user-service.properties
@@ -1,5 +1,5 @@
 
-secret_key = ${secret_key:Proyecto}
+#secret_key = ${secret_key:Proyecto}
 server.port = ${USER_SERVICE_PORT:0}
 
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
