--- a/order-service.properties
+++ b/order-service.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:mysql://${ORDERDB_HOST:localhost}:${ORDERDB_PORTT:3305}/${ORDERDB_NAME:ordermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${ORDERDB_HOST:localhost}:${ORDERDB_PORT:3305}/${ORDERDB_NAME:ordermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.datasource.testWhileIdle = true
