--- a/notification-service.properties
+++ b/notification-service.properties
@@ -1,4 +1,4 @@
-server.port = ${USER_SERVICE_PORT:0}
+server.port = ${NOTIFICATION_SERVICE_PORT:0}
 spring.application.name=notification-service
 
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
