--- a/user-service.properties
+++ b/user-service.properties
@@ -11,7 +11,7 @@ management.endpoints.web.exposure.include=*
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${USERDB_HOST:localhost}:${MYSQL_PORT:3306}/${USERDB_NAME:usermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:root}
