--- a/order-service.properties
+++ b/order-service.properties
@@ -9,7 +9,7 @@ management.endpoints.web.exposure.include=*
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${ORDERDB_HOST:localhost}:${MYSQL_PORT:3305}/${ORDERDB_NAME:ordermicrodb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:root}
