--- a/notification-service.properties
+++ b/notification-service.properties
@@ -19,7 +19,7 @@ spring.mail.properties.mail.smtp.auth=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${NOTIFICATIONDB_HOST:localhost}:${MYSQL_PORT:3306}/${NOTIFICATIONDB_NAME:notificationmicrodb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${MYSQL_USER:root}
