--- a/notification-service.properties
+++ b/notification-service.properties
@@ -16,7 +16,7 @@ spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 
