--- a/webapp.properties
+++ b/webapp.properties
@@ -1,4 +1,4 @@
-server.port = ${WEBAPP_PORT:8090}
+server.port = 8090
 
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.client.fetch-registry=true
