--- a/webapp.properties
+++ b/webapp.properties
@@ -5,4 +5,4 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://${EUREKA_SERVER:localhost}:8761/eureka
 
-
+management.endpoints.web.exposure.include=*
