--- a/webapp.properties
+++ b/webapp.properties
@@ -6,3 +6,6 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8761/eureka
 
 management.endpoints.web.exposure.include=*
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
