--- a/webapp.properties
+++ b/webapp.properties
@@ -7,5 +7,5 @@ eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8761/eurek
 
 management.endpoints.web.exposure.include=*
 
-feign.client.config.default.connectTimeout= 160000000
-feign.client.config.default.readTimeout= 160000000
+spring.cloud.openfeign.client.config.default.connect-timeout=160000000
+spring.cloud.openfeign.client.config.default.read-timeout=160000000
