--- a/webapp.properties
+++ b/webapp.properties
@@ -7,5 +7,10 @@ eureka.client.service-url.defaultZone=http://${EUREKA_HOST:localhost}:8761/eurek
 
 management.endpoints.web.exposure.include=*
 
+paypal.mode = sandbox
+paypal.client.id=${PAYPAL_ID}
+paypal.client.secret=${PAYPAL_SECRET}
+
+
 spring.cloud.openfeign.client.config.default.connect-timeout=160000000
 spring.cloud.openfeign.client.config.default.read-timeout=160000000
